--- a/ecommerce/templates/ingress.yaml
+++ b/ecommerce/templates/ingress.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "ecommerce.fullname" . }}
+  namespace: ecommerce
   labels:
     {{- include "ecommerce.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
