--- a/ecommerce/templates/service.yaml
+++ b/ecommerce/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "ecommerce.fullname" . }}
+  namespace: ecommerce
   labels:
     {{- include "ecommerce.labels" . | nindent 4 }}
 spec:
