--- a/Frontend/requirements.txt
+++ b/Frontend/requirements.txt
@@ -1,5 +1,7 @@
 Flask==2.3.3
 Flask-Login==0.6.2
 requests==2.31.0
-python-dotenv==1.0.0
 Flask-WTF==1.1.1
+Flask-SQLAlchemy==3.1.1
+Werkzeug==2.3.7
+python-dotenv==1.0.0
