--- a/order_payment_service/Dockerfile
+++ b/order_payment_service/Dockerfile
@@ -5,8 +5,11 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Set environment variable for unbuffered python output
+ENV PYTHONUNBUFFERED=1
+
 COPY . .
 
-EXPOSE 5003
+EXPOSE 8080
 
 CMD ["python", "app.py"]
