--- a/ecommerce/values.yaml
+++ b/ecommerce/values.yaml
@@ -64,20 +64,24 @@ service:
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: true
+  className: "nginx"
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
   hosts:
-    - host: chart-example.local
+    - host: "ecommerce.local"
       paths:
+        - path: /api
+          pathType: Prefix
+          backend:
+            serviceName: api-gateway
+            servicePort: 80
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
+          backend:
+            serviceName: frontend
+            servicePort: 80
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
