--- a/ecommerce/values.yaml
+++ b/ecommerce/values.yaml
@@ -140,3 +140,5 @@ database:
   user: "ecommerce_user"
   passwordSecret: "ecommerce-secrets"
   passwordKey: "DB_PASSWORD"
+
+jwtSecret: "supersecretjwtkey"
