--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,11 @@ ENV PYTHONUNBUFFERED=1
 
 COPY . .
 
+# Ensure static subdirectories exist and copy static assets
+RUN mkdir -p static/js static/css
+COPY static/main.js static/js/main.js
+COPY static/style.css static/css/style.css
+
 ENV API_URL=http://api-gateway.ecommerce.svc.cluster.local
 
 EXPOSE 8080
