--- a/notification_service/requirements.txt
+++ b/notification_service/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-psycopg2-binary==2.9.9
-PyJWT==2.8.0
+Flask==2.2.3
+Flask-SQLAlchemy==3.0.3
+PyJWT==2.6.0
 python-dotenv==1.0.0
+resend==0.6.0
+sendgrid==6.10.0
+jinja2==3.1.2
